# dprint_markdown_formatter

./: .credo.exs  .formatter.exs  .gitignore  .tool-versions  CLAUDE.md  LICENSE  README.md  llms.txt  mix.exs  rust-toolchain.toml
.claude/: settings.json
.claude/commands/: bump-version.md
.github/actions/setup-elixir-rust/: action.yml
.github/workflows/: ci.yml  precompiled-nifs.yml  publish.yml  release.yml
config/: config.exs
lib/: dprint_markdown_formatter.ex
lib/dprint_markdown_formatter/: ast_processor.ex  config.ex  error.ex  native.ex  patch_builder.ex  sigil.ex  string_utils.ex  validator.ex
lib/mix/tasks/compile/: markdown_formatter.ex
native/: .gitignore
native/dprint_markdown_formatter/: Cargo.toml  Cross.toml
native/dprint_markdown_formatter/.cargo/: config.toml
native/dprint_markdown_formatter/src/: lib.rs
native/dprint_markdown_formatter_nif/: Cargo.toml
native/dprint_markdown_formatter_nif/src/: lib.rs
test/: config_test.exs  dprint_markdown_formatter_test.exs  sigil_attribute_test.exs  sigil_test.exs  string_utils_test.exs  test_helper.exs
test/mix/tasks/compile/: markdown_formatter_test.exs
test/mix/tasks/compile/cases/: comprehensive_markdown.ex  comprehensive_markdown.ex.formatted
