[package]
name = "dprint_markdown_formatter"
version = "0.1.0"
edition = "2021"

[lib]
name = "dprint_markdown_formatter"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.0" }
dprint-plugin-markdown = "0.18.0"
dprint-core = "0.67.4"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]